--- a/Smith_Raytracing/Smith_Raytracing.vcxproj
+++ b/Smith_Raytracing/Smith_Raytracing.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Smith_Raytracing.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="color.h" />
