--- a/Smith_Raytracing/Smith_Raytracing.vcxproj.filters
+++ b/Smith_Raytracing/Smith_Raytracing.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Smith_Raytracing.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
