--- a/Smith_Raytracing/Smith_Raytracing.vcxproj
+++ b/Smith_Raytracing/Smith_Raytracing.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittableList.h" />
