--- a/Smith_Raytracing/Smith_Raytracing.vcxproj
+++ b/Smith_Raytracing/Smith_Raytracing.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="color.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittableList.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="rtweekend.h" />
     <ClInclude Include="sphere.h" />
